add frontend and dokcer
